license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.EFilingExemptionSupremeCourt"
version = "1.0.9"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Vivian McNaughton", email = "vmcnaughton@illinoislegalaid.org" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.ILAO>=1.1.10",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
